# Effort-AIGI-Detection

./: .gitignore  pyproject.toml  requirements.txt
DeepfakeBench/training/: demo.py
DeepfakeBench/training/detectors/: effort_detector.py
